--- a/single.css
+++ b/single.css
@@ -3,7 +3,6 @@
     margin: 0;
     box-sizing: border-box;
 }
-
 .parent1 {
     background-color: palevioletred;
     display: flex;
@@ -12,12 +11,10 @@
     padding: 15px 30px 15px 35px;
 
 }
-
 .logo a {
     text-decoration: none;
     color: white;
 }
-
 .menu ul {
     display: flex;
     align-items: center;
@@ -25,13 +22,11 @@
     list-style: none;
     font-size: 20px;
 }
-
 .menu a {
     text-decoration: none;
     color: #fff;
     margin: 20px;
 }
-
 section {
     display: flex;
     flex-wrap: wrap;
@@ -41,21 +36,24 @@ section {
     gap: 20px;
     margin: 20px;
 }
-
 .product {
     width: 23%;
+    /* background-color: white; */
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(8, 8, 8, 0.1);
+    /* overflow: hidden; */
+    /* transition: transform 0.3s ease; */
+    /* display: flex; */
     flex-direction: column;
+    /* justify-content: space-between; */
     padding: 1rem;
 }
-
 .product img {
     width: 100%;
     height: 180px;
     object-fit: contain;
+    /* margin-bottom: 10px; */
 }
-
 .product h3 {
     font-size: 17px;
     color: #333;
@@ -63,26 +61,67 @@ section {
     height: 40px;
     overflow: hidden;
 }
+.product p {
+    /* font-weight: bold; */
+    /* margin-bottom: 1rem; */
+    
+}
+
 .button-group {
     display: flex;
+    /* flex-wrap: wrap; */
     gap: 0.5rem;
 }
+
 .button-group button {
     padding: 5px 7px;
-    background-color: blue;
+    background-color: green;
     color: white;
+    /* border: none; */
     border-radius: 4px;
-   
+    /* cursor: pointer; */
+    /* font-size: 0.8rem; */
 }
+
 .button-group buttonone {
     padding: 5px 7px;
     background-color: blue;
     color: white;
+    /* border: none; */
     border-radius: 4px;
-   
+    /* cursor: pointer; */
+    /* font-size: 0.8rem; */
 }
+
 @media screen and (max-width:425px) {
     parent1 ul {
         display: none;
     }
+}
+#product-detail {
+    padding: 20px;
+    max-width: 800px;
+    margin: auto;
+    text-align: center;
+}
+
+.single-product img {
+    width: 100%;
+    max-width: 300px;
+    border-radius: 8px;
+}
+
+.single-product h2 {
+    font-size: 24px;
+    margin: 10px 0;
+}
+
+.single-product p {
+    font-size: 16px;
+    margin: 10px 0;
+}
+
+.single-product h3 {
+    color: green;
+    font-weight: bold;
 }
